--- a/templates/index.html
+++ b/templates/index.html
@@ -15,48 +15,48 @@
     </head>
 <body>
     <!-- ========================NAVBAR==========================-->
-{#    <nav class="navbar navbar-expand-lg navbar-light bg-light">#}
-{#      <div class="container-fluid">#}
-{#        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">#}
-{#          <span class="navbar-toggler-icon"></span>#}
-{#        </button>#}
-{#        <img src="/static/images/taco.jpg" alt="mdo" width="52" height="52" class="rounded-circle">#}
-{#        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">#}
-{#          <ul class="navbar-nav me-auto mb-2 mb-lg-0">#}
-{#            <li class="nav-item">#}
-{#              <a class="nav-link active" aria-current="page" href="#">Warehouse Operative</a>#}
-{#            </li>#}
-{#            <li class="nav-item">#}
-{#              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>#}
-{#            </li>#}
-{#          </ul>#}
-{#          <form class="d-flex">#}
-{#            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">#}
-{#            <button class="btn btn-outline-success" type="submit">Search</button>#}
-{#          </form>#}
-{#        </div>#}
-{#      </div>#}
-{#    </nav>#}
-{##}
-{#    <!-- ========================List==========================-->#}
-{#    <br>#}
-{#    <div class="d-flex justify-content-evenly">#}
-{#        <div class=" flex row g-3">#}
-{#            <div class="col-sm">#}
-{#                <input type="text" class="form-control" placeholder="SKU" aria-label="SKU" id="sku">#}
-{#            </div>#}
-{#            <div class="col-sm-5">#}
-{#                <input type="text" class="form-control" placeholder="Description" aria-label="Description" id="description">#}
-{#             </div>#}
-{#            <div class="col-sm">#}
-{#                <input type="text" class="form-control" placeholder="Location" aria-label="Location" id="location">#}
-{#            </div>#}
-{#            <div class="col-sm">#}
-{#                <input type="text" class="form-control" placeholder="Count" aria-label="Count" id="count">#}
-{#            </div>#}
-{#                <button type="button" class="btn btn-outline-success">Success</button>#}
-{#        </div>#}
-{#    </div>#}
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <img src="/static/images/taco.jpg" alt="mdo" width="52" height="52" class="rounded-circle">
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Warehouse Operative</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+
+    <!-- ========================List==========================-->
+    <br>
+    <div class="d-flex justify-content-evenly">
+        <div class=" flex row g-3">
+            <div class="col-sm">
+                <input type="text" class="form-control" placeholder="SKU" aria-label="SKU" id="sku">
+            </div>
+            <div class="col-sm-5">
+                <input type="text" class="form-control" placeholder="Description" aria-label="Description" id="description">
+             </div>
+            <div class="col-sm">
+                <input type="text" class="form-control" placeholder="Location" aria-label="Location" id="location">
+            </div>
+            <div class="col-sm">
+                <input type="text" class="form-control" placeholder="Count" aria-label="Count" id="count">
+            </div>
+                <button type="button" class="btn btn-outline-success">Success</button>
+        </div>
+    </div>
 
 
 
