python done, trying to connect with url

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Stock Count</title>
          <!-- ========================LINK-CSS==========================-->
-         <link rel="stylesheet" href="style.css">
+         <link rel="stylesheet" href="static/style.css">
          <!-- ========================BOOSTRAP-CDN==========================-->
-         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
-         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
-         <!-- ========================WEB-ICON==========================-->
-         <link rel="shortcut icon" href="">
+{#         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">#}
+{#         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>#}
     </head>
 <body>
     <!-- ========================NAVBAR==========================-->
@@ -38,27 +36,25 @@
       </div>
     </nav>
 
-    <!-- ========================List==========================-->
-    <br>
-    <div class="d-flex justify-content-evenly">
-        <div class=" flex row g-3">
-            <div class="col-sm">
-                <input type="text" class="form-control" placeholder="SKU" aria-label="SKU" id="sku">
-            </div>
-            <div class="col-sm-5">
-                <input type="text" class="form-control" placeholder="Description" aria-label="Description" id="description">
-             </div>
-            <div class="col-sm">
-                <input type="text" class="form-control" placeholder="Location" aria-label="Location" id="location">
-            </div>
-            <div class="col-sm">
-                <input type="text" class="form-control" placeholder="Count" aria-label="Count" id="count">
-            </div>
-                <button type="button" class="btn btn-outline-success">Success</button>
-        </div>
-    </div>
+    <!-- ========================TABLE==========================-->
+     <table class="table table-striped table-hover" id="inventoryTable">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col" >SKU</th>
+            <th scope="col">Description</th>
+            <th scope="col">Location</th>
+            <th scope="col">Count</th>
+            <th scope="col">Status</th>
+          </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+      </table>
 
 
 
+    <script src="static/script.js"></script>
 </body>
 </html>
