--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
          <!-- ========================LINK-CSS==========================-->
          <link rel="stylesheet" href="static/style.css">
          <!-- ========================BOOSTRAP-CDN==========================-->
-{#         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">#}
-{#         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>#}
+         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
+         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
     </head>
 <body>
     <!-- ========================NAVBAR==========================-->
